--- a/include/db.php.env
+++ b/include/db.php.env
@@ -1,6 +1,6 @@
 <?php
 
-$conection = mysqli_connect('login-php-dino.test', 'root', 'root');
+$conection = mysqli_connect('LOCALHOST', 'DB_USER', 'DB_USER_PASSWORD');
 
 if (!$conection) {
     die('Sem conexao: ' . mysqli_error());
